fix: 10502-radio-button-misalignment-bug

--- a/packages/styles/scss/components/radio-button/_radio-button.scss
+++ b/packages/styles/scss/components/radio-button/_radio-button.scss
@@ -65,6 +65,8 @@ $radio-border-width: 1px !default;
   .#{$prefix}--radio-button {
     @include visually-hidden;
 
+    margin-block-start: 1.3rem;
+    margin-inline-start: 0.7rem;
     visibility: inherit;
   }
 
